jisc-involve/wp-content/themes/twentytwenty-child/style.css
/*
 Theme Name:   Twenty Twenty Child
 Theme URI:    todo
 Description:  Twenty Twenty Child Theme to theme Jsic involve
 Author:       Leigh Morris
 Template:     twentytwenty
 Version:      1.0.0
 License:      GNU General Public License v2 or later
 License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
*/

/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------

  0.  CSS Reset
  1.  Document Setup
  2.  Element Base
  3.  Helper Classes
  4.  Site Header
  5.  Menu Modal
  6.  Search Modal
  7.  Page Templates
    a.  Template: Cover Template
    c.  Template: Full Width
  8.  Post: Archive
  9.  Post: Single
  10. Blocks
  11. Entry Content
  12. Comments
  13. Site Pagination
  14. Error 404
  15. Widgets
  16. Site Footer
  17. Media Queries

----------------------------------------------------------------------------- */


/* -------------------------------------------------------------------------- */

/*  1. Document Setup
/* -------------------------------------------------------------------------- */


body {
  background: #fff;
  color: #333;
  font-family: 'Roboto', 'HelveticaNeue', 'Helvetica Neue', Arial, sans-serif;
  letter-spacing: normal;
}


/* -------------------------------------------------------------------------- */

/*  2. Element Base
/* ---------------------------------------------*---------------------------- */


h1,
h2,
h3,
h4,
h5,
h6,
.faux-heading {
/*  font-feature-settings: "lnum";*/
/*  font-variant-numeric: lining-nums;*/
/*  font-weight: 700;*/
  letter-spacing: normal;
/*  line-height: 1.25;*/
/*  margin: 3.5rem 0 2rem;*/
}

p {
  font-size: 1.8rem;
}

a {
  color: #069;
  text-decoration: underline;
}

a:focus {
  text-decoration: none;
}

a:hover {
  color: #ae460e;
}

.entry-content hr,
hr.styled-separator {
  background: none;
  background-color: #d9d9d9 !important;
}

.entry-content hr::before,
.entry-content hr::after,
hr.styled-separator::before,
hr.styled-separator::after {
  display: none;
}


/* Quotes ------------------------------------ */

blockquote {
  border-left-width: .6rem;
  border-left-color: #d9d9d9;/* Override theme customization in page style. */
}


/* Inputs ------------------------------------ */

input,
textarea,
button,
.button,
.faux-button,
.wp-block-button__link,
.wp-block-file__button {
  font-family: 'Roboto', 'HelveticaNeue', 'Helvetica Neue', Arial, sans-serif;
}

input[type="submit"] {
  font-size: 1.8rem;
  text-transform: none;
  background-color: #007aaa;
  border-radius: .6rem;
}

input[type="submit"]:focus,
input[type="submit"]:hover {
  text-decoration: none;
  background-color: #0092cb;
  -webkit-transition: background-color 0.3s cubic-bezier(0.25, 0.8, 0.25, 1), border-color 0.3s cubic-bezier(0.25, 0.8, 0.25, 1), box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
  transition: background-color 0.3s cubic-bezier(0.25, 0.8, 0.25, 1), border-color 0.3s cubic-bezier(0.25, 0.8, 0.25, 1), box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }

input[type="submit"]:focus {
  transition: none;
}

input[type="submit"]:hover {
  box-shadow: 0 0.3rem 1.2rem rgba(0, 0, 0, 0.23), 0 0.3rem 1.2rem rgba(0, 0, 0, 0.16);
}

input[type="submit"]:active {
  box-shadow: none;
  -webkit-transition: none;
  transition: none;
}


/* -------------------------------------------------------------------------- */

/*  3. Helper Classes
/* -------------------------------------------------------------------------- */

/* Sections ---------------------------------- */

.section-inner {
  max-width: 97.2rem;
}

.section-inner.medium {
  max-width: 97.2rem;
}


/* -------------------------------------------------------------------------- */

/*  4.  Site Header
/* -------------------------------------------------------------------------- */


#site-header {
  -webkit-box-shadow: 0 0.1rem 0.2rem rgba(0,0,0,0.2);
  -moz-box-shadow: 0 0.1rem 0.2rem rgba(0,0,0,0.2);
  box-shadow: 0 0.1rem 0.2rem rgba(0,0,0,0.2);
}

.header-inner {
  max-width: 97.2rem;
}


/* Header Titles ----------------------------- */

.site-title a {
  color: #666;
  display: block;
  text-decoration: none;
}

.site-title a:focus {
  text-decoration: none;
}

.site-title a:hover {
  color: #ae460e;
  text-decoration: underline;
}

.site-description {
  color: #333;
  transition: all 0.15s linear;
}


/* Header Toggles ---------------------------- */

body:not(.overlay-header) #site-header .toggle {
  color: #666;/* Override theme customization in page style. */
}

body:not(.overlay-header) #site-header .toggle:focus {
  text-decoration: none;/* Override theme customization in page styles. */
}

body:not(.overlay-header) #site-header .toggle:hover {
  color: #ae460e;/* Override theme customization in page style. */
}

body:not(.overlay-header) .toggle:focus .toggle-inner .toggle-text {
  text-decoration: none;
}

body:not(.overlay-header) .toggle:hover .toggle-inner .toggle-text {
  color: #ae460e;/* Override theme customization in page style. */
}

/* Primary Menu ---------------------------- */

.primary-menu li.current-menu-item > a {
  text-decoration: none;
}

.primary-menu li.current-menu-item > a:hover {
  text-decoration: underline;
}

body:not(.overlay-header) .primary-menu > li > a {
  color: #666;/* Override theme customization in page style. */
}


body:not(.overlay-header) .primary-menu > li.current-menu-item > a {
  color: #333;/* Override theme customization in page style. */
}

body:not(.overlay-header) .primary-menu > li > a:focus {
  text-decoration: none;/* Override theme customization in page style. */
}

body:not(.overlay-header) .primary-menu > li > a:hover {
  color: #ae460e;/* Override theme customization in page style. */
}

/* -------------------------------------------------------------------------- */

/*  5. Menu Modal
/* -------------------------------------------------------------------------- */

.menu-modal .toggle {
  color: #666;/* Override theme customization in page style. */
}

.menu-modal .toggle:focus {
  text-decoration: none;
}

.menu-modal .toggle:hover {
  color: #ae460e;
  text-decoration: underline;
}


/* Main Menu --------------------------------- */

.modal-menu a {
  color: #666;
}

.modal-menu a:focus {
  text-decoration: none;
}

.modal-menu a:hover {
  color: #ae460e;
}


/* -------------------------------------------------------------------------- */

/*  7c. Template: Full Width
/* -------------------------------------------------------------------------- */


body.template-full-width .entry-content > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide),
body.template-full-width [class*="__inner-container"] > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide) {
  max-width: 97.2rem;
}


/* -------------------------------------------------------------------------- */

/*  8. Post: Archive
/* -------------------------------------------------------------------------- */


/* Archive Header ---------------------------- */

.archive-header {
  background-color: #f7f7f7;
}

.archive-header-inner {
  text-align: left;
}

.archive-header .archive-title .color-accent {
  color: #333;
}


/* -------------------------------------------------------------------------- */

/*  9. Post: Single
/* -------------------------------------------------------------------------- */


/* Post Header ------------------------------- */

.singular .entry-header {
  background-color: #f7f7f7;
}

.entry-header.has-text-align-center {
  text-align: left;
}

.singular:not(.overlay-header) .entry-header a:hover {/* Override theme customization in page style. */
  color: #ae460e;
}

.entry-categories-inner {
  justify-content: start;
}

.entry-categories a {
  border-bottom-width: 0;
  text-decoration: underline;
}

.entry-categories a:focus {
  text-decoration: none;
}

.entry-title a {
  color: #069;
  text-decoration: underline;
}

.entry-title a:focus {
  text-decoration: none;
}

.entry-title a:hover {
  color: #ae460e;
}

/* POST META */

.post-meta-single-top .post-meta {
  justify-content: start;
}

.post-meta-wrapper {
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  width: 100%;
}

.singular:not(.overlay-header) .entry-header .post-meta a,/* Override theme customization in page style. */
.post-meta a {
  color: #069;
  text-decoration: underline;
}

.singular:not(.overlay-header) .entry-header .post-meta a:focus,/* Override theme customization in page style. */
.post-meta a:focus {
  text-decoration: none;
}

.singular:not(.overlay-header) .entry-header .post-meta a:hover,/* Override theme customization in page style. */
.post-meta a:hover {
  color: #ae460e;
}

.post-meta .meta-icon {
  color: #7f7f7f;
}


/* Single Pagination ------------------------- */

.pagination-single a {
  color: #666;
}

.pagination-single a:focus {
  text-decoration: none;
}

.pagination-single a:hover {
  color: #ae460e;
}



/* -------------------------------------------------------------------------- */

/*  11. Entry Content
/* -------------------------------------------------------------------------- */


.entry-content {
  margin-right: auto;
  margin-left: auto;
  max-width: 97.2rem;
}

.entry-content > * {
  margin-right: 0;
  margin-left: 0;
}

.entry-content a:hover {
  text-decoration: underline;
}

.entry-content p,
.entry-content ol,
.entry-content ul,
.entry-content dl,
.entry-content dt {
  font-family: 'Roboto', 'HelveticaNeue', 'Helvetica Neue', Arial, sans-serif;
}

.widget_text p,
.widget_text ol,
.widget_text ul,
.widget_text dl,
.widget_text dt,
.widget-content .rssSummary {
  font-family: 'Roboto', 'HelveticaNeue', 'Helvetica Neue', Arial, sans-serif;
}

/* Alignment Classes ------------------------- */

.entry-content > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide) {
  max-width: 72.45rem;
  width: 100%;
}


/* -------------------------------------------------------------------------- */

/*  12. Comments
/* -------------------------------------------------------------------------- */


/* Comment Item ----------------------------- */

/* COMMENT HEADER */

.comment-meta a {
  color: #069;
  text-decoration: underline;
}

.comment-meta a:hover {
  color: #ae460e;
  text-decoration: underline;
}

.comment-metadata a {
  text-decoration: underline;
}

.comment-metadata a:focus {
  text-decoration: none;
}

/* COMMENT FOOTER */


.comment-footer-meta a:focus {
  text-decoration: none;
}

.comment-footer-meta a:hover {
  color: #fff;
}


/* Comment Respond ---------------------------- */

.comment-respond .required {
  color: #c00;
}


/* -------------------------------------------------------------------------- */

/*  15. Widgets
/* -------------------------------------------------------------------------- */


.widget a {
  text-decoration: underline;
}

.widget a:focus {
  text-decoration: none;
}


/* -------------------------------------------------------------------------- */

/*  16. Site Footer
/* -------------------------------------------------------------------------- */


.footer-nav-widgets-wrapper {
  background-color: #f7f7f7;/* Override theme customization in page style. */
}

#site-footer {
  background-color: #f2f2f2;
}


/* Footer Bottom ----------------------------- */

#site-footer a:focus {
  text-decoration: none;
}

#site-footer a:hover {
  color: #ae460e;
}

.footer-copyright a {
  color: #666;
}


/* Footer Widgets ---------------------------- */

.footer-widgets-outer-wrapper {
  border-bottom-width: 0;/* Override theme customization in page style. */
}

